--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PlayGame">
+        <activity android:name=".PlayGame"
+                  android:configChanges="keyboardHidden|orientation|screenSize">
         </activity>
         <activity android:name=".HowToPlay">
         </activity>
